exceptions on some platforms has been fixed.

By building shifted FIR tables with samples according to the sampling
frequency, the resampling code dramatically reduces the computational
effort in the filter convolutions, without any loss of accuracy. The
filter convolutions are now also vectorizable on current hardware. The
implementation builds on ideas by Laurent Ganier.


Changes in reSID version 0.15
-----------------------------

An error in the emulation of the ADSR delay bug has been fixed. When
emulation of the ADSR delay bug was introduced in reSID 0.2, the delay
was one cycle too long. One cycle was subtracted from the delay in
reSID 0.4, however unfortunately one rate counter period was added as
well, thus increasing the error. At the time there was no method to
fully synchronize the CPU with envelope 3, so the measurements relied
on averaging. Because of pipelining in the envelope logic the effects
of a write are delayed, and this caused the test code to miss the
target by exactly one rate counter period on a real SID. The current
test code does achieves full synchronization with envelope 3, so this
time the delay should be 100% correct. There are still side effects
caused by pipelining which are not implemented in reSID, however these
effects are not controllable without full synchronization with the
envelope, something which is hard to achieve with envelope 3, and
impossible with envelope 1 and 2.

The envelope state (ADSR) has been added to the SID state, and the
volume setting is now restored from the SID state.

Filter scaling and clipping has been added to avoid sample overflows
in the resampling filter.


Changes in reSID version 0.14
-----------------------------

The SID external audio input is now emulated. This can be used e.g. to
simulate the hack of connecting a resistor from EXT IN to GND to boost
the sample volume on the MOS8580. Calling sid.input(-32768) makes the
MOS8580 sound more or less like the MOS6581 with respect to samples.