@@ -30,6 +30,7 @@ class SID
 {
 public:
   SID();
+  ~SID();
 
   void set_chip_model(chip_model model);
   void enable_filter(bool enable);
@@ -88,8 +89,10 @@ protected:
 			      int interleave);
   RESID_INLINE int clock_interpolate(cycle_count& delta_t, short* buf, int n,
 				     int interleave);
-  RESID_INLINE int clock_resample(cycle_count& delta_t, short* buf, int n,
-				  int interleave);
+  RESID_INLINE int clock_resample_interpolate(cycle_count& delta_t, short* buf,
+					      int n, int interleave);
+  RESID_INLINE int clock_resample_fast(cycle_count& delta_t, short* buf,
+				       int n, int interleave);
 
   Voice voice[3];
   Filter filter;
@@ -106,9 +109,17 @@ protected:
   int ext_in;
 
   // Resampling constants.
+  // The error in interpolated lookup is bounded by 1.234/L^2,
+  // while the error in non-interpolated lookup is bounded by
+  // 0.7854/L + 0.4113/L^2, see
+  // http://www-ccrma.stanford.edu/~jos/resample/Choice_Table_Size.html
+  // For a resolution of 16 bits this yields L >= 285 and L >= 51473,
+  // respectively.
   enum { FIR_N = 125 };
-  enum { FIR_RES = 512 };
+  enum { FIR_RES_INTERPOLATE = 285 };
+  enum { FIR_RES_FAST = 51473 };
   enum { FIR_SHIFT = 15 };
+  enum { RINGSIZE = 16384 };
 
   // Sampling variables.
   sampling_method sampling;
@@ -119,11 +130,11 @@ protected:
   int fir_N;
   int fir_RES;
 
-  // Ring buffer with overflow for contiguous storage of 16384 samples.
-  short sample[16384*2];
+  // Ring buffer with overflow for contiguous storage of RINGSIZE samples.
+  short* sample;
 
-  // FIR_RES filter tables.
-  short fir[FIR_N*FIR_RES];
+  // FIR_RES filter tables (FIR_N*FIR_RES).
+  short* fir;
 };
 
 #endif // not __SID_H__
