@@ -13,6 +13,14 @@ effort in the filter convolutions, without any loss of accuracy. The
 filter convolutions are now also vectorizable on current hardware. The
 implementation builds on ideas by Laurent Ganier.
 
+The resampling code has been split into two functions, one using
+interpolation and a small set of shifted filter tables, and one using
+direct lookup and a large set of shifted filter tables. The accuracy
+is the same, the difference is that the direct lookup runs at almost
+twice the speed at the cost of approximately 12MB more memory. It is
+now possible to run high quality resampling in real time on quite
+modest hardware, provided that a vectorizing compiler is used.
+
 
 Changes in reSID version 0.15
 -----------------------------
